fix: prevent CRQ decoder memory accumulation with generation caching
- Add generation caching to avoid re-running CRQ generation on subsequent vLLM forward calls
- Return EOS-biased hidden states after generation to signal completion to vLLM sampler
- Clear past_key_values after generation to free GPU memory
- Reduce Stage-1 max_tokens from 4096 to 8 to limit forward call iterations
- Add reset_generation_cache method for future multi-request support

Signed-off-by: JaredforReal <w13431838023@gmail.com>

--- a/vllm_omni/model_executor/stage_configs/fun_audio_chat_s2s.yaml
+++ b/vllm_omni/model_executor/stage_configs/fun_audio_chat_s2s.yaml
@@ -43,7 +43,7 @@ stage_args:
       temperature: 0.7
       top_p: 0.9
       top_k: 50
-      max_tokens: 2048
+      max_tokens: 256 # Reduced for faster CRQ generation (256 * 5 = 1280 speech tokens)
       seed: 42
       detokenize: true
       repetition_penalty: 1.05
@@ -78,7 +78,7 @@ stage_args:
       temperature: 0.9
       top_p: 0.8
       top_k: 40
-      max_tokens: 4096
+      max_tokens: 8  # CRQ generates all speech tokens in one forward, limit to avoid repeated calls
       seed: 42
       detokenize: false
       repetition_penalty: 1.0
