--- a/vllm_omni/model_executor/stage_configs/glm_image.yaml
+++ b/vllm_omni/model_executor/stage_configs/glm_image.yaml
@@ -2,7 +2,6 @@
 # Stage 0: AR Model (vLLM implementation) - generates prior_token_ids
 # Stage 1: Diffusion (DiT + VAE) - denoising and image decoding
 
-# The following config is designed for H100-80G GPUs.
 stage_args:
   # Stage 0: AR Model (GlmImageForConditionalGeneration)
   # This stage uses the vLLM-optimized AR model to generate prior tokens
@@ -22,10 +21,12 @@ stage_args:
       enforce_eager: false
       trust_remote_code: true
       engine_output_type: token_ids # Output prior_token_ids for diffusion stage
+      distributed_executor_backend: "mp"
       enable_prefix_caching: false
       max_num_batched_tokens: 32768
       hf_config_name: vision_language_encoder # Subfolder in model path
     final_output: false # AR is not the final output
+    is_comprehension: true
     default_sampling_params:
       temperature: 0.0
       top_p: 1.0
@@ -44,14 +45,26 @@ stage_args:
       max_batch_size: 1
     engine_args:
       model_arch: GlmImagePipeline
+      model_stage: dit
       # Diffusion-specific parameters
       num_gpus: 1
       cfg_parallel_size: 1 # Set to 2 for CFG parallelism on 2 GPUs
+      enforce_eager: true
+      trust_remote_code: true
+      engine_output_type: image # Final output is image
+      distributed_executor_backend: "mp"
+      enable_prefix_caching: false
     engine_input_source: [0] # Input from AR stage
     custom_process_input_func: vllm_omni.model_executor.stage_input_processors.glm_image.ar2diffusion
     final_output: true
     final_output_type: image
+    is_comprehension: false
     default_sampling_params:
+      temperature: 0.0
+      top_p: 1.0
+      top_k: -1
+      seed: 42
+      detokenize: true
       num_inference_steps: 50
       guidance_scale: 1.5
       height: 1024
