--- a/vllm_omni/model_executor/stage_configs/glm_image.yaml
+++ b/vllm_omni/model_executor/stage_configs/glm_image.yaml
@@ -15,6 +15,7 @@ stage_args:
     engine_args:
       model_stage: ar
       model_arch: GlmImageForConditionalGeneration
+      model_subdir: vision_language_encoder # AR model config.json is in this subdirectory
       worker_cls: vllm_omni.worker.gpu_ar_worker.GPUARWorker
       scheduler_cls: vllm_omni.core.sched.omni_ar_scheduler.OmniARScheduler
       gpu_memory_utilization: 0.6
@@ -24,8 +25,6 @@ stage_args:
       distributed_executor_backend: "mp"
       enable_prefix_caching: false
       max_num_batched_tokens: 32768
-      # Model path points to the main GLM-Image directory
-      # vLLM will load GlmImageForConditionalGeneration from it
     final_output: false # AR is not the final output
     is_comprehension: true
     default_sampling_params:
