--- a/vllm_omni/model_executor/stage_configs/glm_image.yaml
+++ b/vllm_omni/model_executor/stage_configs/glm_image.yaml
@@ -29,7 +29,7 @@ stage_args:
     final_output: false # AR is not the final output
     is_comprehension: true
     default_sampling_params:
-      temperature: 0.0
+      temperature: 1.0 # Must use sampling (not greedy) for image token generation
       top_p: 1.0
       top_k: -1
       max_tokens: 16384 # Support up to 2048x2048 images (64x64 tokens * 4 = 16384)
