--- a/vllm_omni/model_executor/stage_configs/glm_image.yaml
+++ b/vllm_omni/model_executor/stage_configs/glm_image.yaml
@@ -31,8 +31,9 @@ stage_args:
     default_sampling_params:
       temperature: 0.9 # From model's generation_config.json
       top_p: 0.75 # From model's generation_config.json
-      top_k: -1
-      max_tokens: 16384 # Support up to 2048x2048 images (64x64 tokens * 4 = 16384)
+      top_k: 16512 # vision_vocab_size from generation_config.json
+      max_tokens: 1281 # For 1024x1024: small(16x16=256) + large(32x32=1024) + EOS(1)
+      stop_token_ids: [16385] # eos_token_id from generation_config.json
       seed: 42
       detokenize: false
 
