try implement i2i mode
Signed-off-by: JaredforReal <w13431838023@gmail.com>

--- a/vllm_omni/model_executor/stage_configs/glm_image.yaml
+++ b/vllm_omni/model_executor/stage_configs/glm_image.yaml
@@ -45,6 +45,7 @@ stage_args:
       process: true
       devices: "1" # Can use different GPU, or same GPU if memory allows
       max_batch_size: 1
+      requires_multimodal_data: true # Required for i2i mode to pass condition images
     engine_args:
       model_stage: dit
       model_arch: GlmImagePipeline # Required for diffusion model class resolution
